--- a/project18/index.html
+++ b/project18/index.html
@@ -10,7 +10,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Backgroun Slider</title>
+    <title>Background Slider</title>
   </head>
   <body>
     <div class="Slider-container">
