--- a/project14/index.html
+++ b/project14/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Navigaion</title>
+    <title>Animated Navigation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
