--- a/project16/index.html
+++ b/project16/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Drink Water/<h1>
+    <h1>Drink Water</h1>
     <h3>Goal: 2 Liters</h3>
     <div class="cup">
         <div class="remained"  id="remained">
