--- a/project36/index.html
+++ b/project36/index.html
@@ -2,19 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HoverBoard</title>
     <link rel="stylesheet" href="style.css">
-    <title>Drag N Drop</title>
 </head>
 <body>
-    <div class="empty">
-        <div class="fill" draggable="true"></div>
+    <div class="container" id="container">
+       
+
+
     </div>
-    <div class="empty"></div>
-    <div class="empty"></div>
-    <div class="empty"></div>
-    <div class="empty"></div>
 
     <script src="script.js"></script>
-    
 </body>
 </html>
